# nu_plugin_httpserve

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: lib.rs  main.rs  plugin.rs  serve.rs
src/commands/: mod.rs  serve.rs
