[package]
name = "nu_plugin_httpserve"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.1.0"
http-body = "1.0.0"
http-body-util = "0.1"
nu-plugin = "0.98"
nu-protocol = "0.98"
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1.15"
